# DeepSurveySim

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-telescope.yaml  test-telescope.yaml
DeepSurveySim/IO/: __init__.py  read_config.py
DeepSurveySim/Survey/: __init__.py  cummulative_survey.py  observation_variables.py  survey.py  weather.py
DeepSurveySim/settings/: SEO.yaml  SEO_weather.csv  equatorial_survey.yaml  skybright_config.conf
challenge/: readme.md
docs/source/: conf.py  configurations.rst  cookbook.rst  cummulative_survey.rst  gym_example.rst  index.rst  io.rst  offline_env_example.rst  survey.rst
telescope_positioning_simulation/: config.py  default_config.yaml  experiment_config.yaml  model_test.py  model_test_ppo.py  model_train.py  model_train_a2c.py  model_train_ddpg.py  model_train_ppo.py  model_train_recppo.py  model_train_sac.py  model_train_td3.py  model_tune.py  read_config.py  run_simulation.py  save_simulation.py  seo.py  survey.py  test_RLLib.py
telescope_positioning_simulation/IO/: __init__.py  read_config.py  save_simulation.py
telescope_positioning_simulation/Survey/: RLLib_survey.py  StableBaselines_survey.py  __init__.py  action.py  cummulative_survey.py  observation_variables.py  survey.py  weather.py
telescope_positioning_simulation/settings/: SEO.yaml  equatorial_survey.yaml
telescope_positioning_simulation/utils/: read_config.py
test/: test_cummaltive_survey.py  test_observation_variables.py  test_read.py  test_rllib.py  test_run_survey.py  test_save.py  test_survey.py  test_weather.py
test/test_files/: test_config.yaml
test/test_files/test_saving/survey_2023_07_07_14_16_16_9334/: run_config.yaml
test/test_files/test_saving/survey_2023_07_20_10_18_59_5287/: survey_results.json
test/test_files/test_saving/survey_2023_07_20_10_20_55_4012/: survey_results.json
test/test_files/test_saving/survey_2023_07_20_10_22_21_6862/: survey_results.json
test/test_files/test_saving/survey_2023_07_20_10_23_23_4571/: survey_results.json
test/test_files/test_saving/survey_2023_07_20_10_25_26_8550/: survey_results.json
(+108 files in other folders)
