[tool.poetry]
name = "telescope_positioning_simulation"
version = "0.1.0"
description = ""
authors = ["voetberg <magpie127@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
astroplan = "^0.8"
PyYAML = "^6.0"
numexpr = "^2.8.4"

[tool.poetry.dev-dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
