[tool.poetry]
name = "telescope_positioning_simulation"
version = "0.1.0"
description = ""
authors = ["voetberg <magpie127@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "^1.24.2"
pandas = "^1.5.3"
astroplan = "^0.8"
PyYAML = "^6.0"
numexpr = "^2.8.4"
skybright = {git = "https://github.com/ehneilsen/skybright.git"}
configparser = "^5.3.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
pre-commit = "^3.3.2"
sphinx = "^7.0.1"
sphinx-autodoc-typehints = "^1.23.3"
ray = {extras = ["rllib"], version = "^2.6.0"}
gymnasium = "0.26.3"
torch = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
